--- a/MyCity4Kids/MyCity4Kids/res/layout/campaign_url_proof_cell.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/campaign_url_proof_cell.xml
@@ -8,12 +8,15 @@
     <com.mycity4kids.widget.CustomFontEditText
         android:id="@+id/textUrl"
         android:layout_width="0dp"
-        android:layout_height="41dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="5dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
+        android:paddingTop="@dimen/space_10"
+        android:paddingBottom="@dimen/space_10"
+        android:paddingRight="@dimen/space_40"
         android:background="@drawable/article_listing_item_border_bg"
         android:fontFamily="sans-serif"
         android:hint="Enter page link or Url"
