--- a/MyCity4Kids/MyCity4Kids/res/xml/remote_config_defaults.xml
+++ b/MyCity4Kids/MyCity4Kids/res/xml/remote_config_defaults.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?><!-- START xml_defaults -->
 <defaultsMap>
     <entry>
-        <key>show_app_update_dialog_flag</key>
+        <key>latest_app_version</key>
         <value>false</value>
     </entry>
     <entry>
