--- a/MyCity4Kids/MyCity4Kids/res/layout/facebook_comment_fragment.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/facebook_comment_fragment.xml
@@ -23,7 +23,7 @@
             android:layout_centerHorizontal="true"
             android:layout_gravity="center"
             android:layout_marginBottom="10dp"
-            android:indeterminateTint="@color/colorPrimary"
+            android:indeterminateTint="#005099"
             android:indeterminateTintMode="src_atop" />
 
     </FrameLayout>
