--- a/MyCity4Kids/MyCity4Kids/res/drawable/border_live_text_on_image_video_challenge.xml
+++ b/MyCity4Kids/MyCity4Kids/res/drawable/border_live_text_on_image_video_challenge.xml
@@ -2,9 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 <stroke
     android:width="1dp"
-    android:color="@color/red" />
+    android:color="#FFFF4444" />
 
-<solid android:color="@color/red" />
+<solid android:color="#FFFF4444" />
 
 <padding
     android:bottom="1dp"
