--- a/MyCity4Kids/MyCity4Kids/res/drawable/rectangular_btn_red_bg.xml
+++ b/MyCity4Kids/MyCity4Kids/res/drawable/rectangular_btn_red_bg.xml
@@ -4,7 +4,7 @@
 
     <corners
         android:radius="4dp" />
-    <solid android:color="@color/red" />
+    <solid android:color="#FFFF4444" />
 
 
 </shape>
