--- a/MyCity4Kids/MyCity4Kids/res/layout/item_empty_view.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/item_empty_view.xml
@@ -1,21 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/linearLayoutView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
     android:background="@color/white"
+    android:gravity="center"
     android:orientation="vertical"
-    android:padding="@dimen/activity_horizontal_margin">
+    android:padding="16dp">
 
     <ImageView
         android:id="@+id/imageViewEmpty"
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_gravity="center"
-        android:src="@drawable/ic_rabbit"
-     />
+        android:src="@drawable/ic_rabbit" />
 
     <TextView
         android:id="@+id/tv_message"
@@ -42,10 +40,9 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="16dp"
-        android:background="@color/colorPrimary"
+        android:background="#005099"
         android:text="@string/retry"
         android:textColor="@color/white"
-        android:textSize="20sp"
-      />
+        android:textSize="20sp" />
 
 </LinearLayout>
