--- a/MyCity4Kids/MyCity4Kids/res/layout/tracker_list_index.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/tracker_list_index.xml
@@ -61,7 +61,7 @@
         android:id="@+id/textstatusError"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/red"
+        android:textColor="#FFFF4444"
         android:textSize="12sp"
         app:fontName="oswald.ttf"
         app:layout_constraintStart_toStartOf="@+id/textStatusName"
