--- a/MyCity4Kids/MyCity4Kids/res/layout/trans.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/trans.xml
@@ -11,8 +11,8 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="400dp"
-        android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
         android:background="#fff">
 
 
@@ -31,7 +31,7 @@
             android:layout_height="140dp"
             android:layout_below="@+id/write"
             android:layout_marginTop="10dp"
-            android:background="@color/colorPrimary"
+            android:background="#005099"
             android:orientation="horizontal">
 
         </androidx.recyclerview.widget.RecyclerView>
@@ -52,8 +52,8 @@
             android:layout_height="32dp"
             android:layout_below="@+id/recyclerview"
             android:layout_marginLeft="220dp"
-            android:layout_marginRight="18dp"
             android:layout_marginTop="28dp"
+            android:layout_marginRight="18dp"
             android:background="@drawable/border">
 
             <TextView
@@ -61,8 +61,8 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:paddingLeft="5dp"
-                android:paddingRight="5dp"
                 android:paddingTop="5dp"
+                android:paddingRight="5dp"
                 android:text="edit previous"
                 android:textSize="17dp" />
         </RelativeLayout>
@@ -136,18 +136,18 @@
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
             android:layout_alignParentStart="true"
-            android:layout_marginBottom="22dp"
+            android:layout_alignParentBottom="true"
             android:layout_marginStart="33dp"
+            android:layout_marginBottom="22dp"
             android:text="Type 1" />
 
         <TextView
             android:id="@+id/textView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
             android:layout_alignTop="@+id/textView"
+            android:layout_alignParentStart="true"
             android:layout_marginStart="124dp"
             android:text="Type 2" />
 
@@ -156,8 +156,8 @@
             android:id="@+id/textView4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
             android:layout_alignTop="@+id/textView"
+            android:layout_alignParentEnd="true"
             android:layout_marginEnd="130dp"
             android:text="Type 3" />
 
@@ -166,8 +166,8 @@
             android:id="@+id/textView6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
             android:layout_alignTop="@+id/textView"
+            android:layout_alignParentEnd="true"
             android:layout_marginEnd="42dp"
             android:text="Type 4" />
 
