--- a/MyCity4Kids/MyCity4Kids/res/layout/filtered_topics_articles_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/filtered_topics_articles_activity.xml
@@ -6,6 +6,54 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <RelativeLayout
+        android:id="@+id/bookmarkInfoView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:background="@color/app_red"
+        android:elevation="5dp"
+        android:padding="10dp"
+        android:visibility="gone">
+
+        <ImageView
+            android:id="@+id/bookmarkImageView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:background="@drawable/bookmark_icon_round_bg"
+            android:padding="10dp"
+            android:src="@drawable/ic_bookmark"
+            android:tint="@color/app_red" />
+
+        <com.mycity4kids.widget.CustomFontTextView
+            android:id="@+id/messageTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_toLeftOf="@+id/viewBookmarkedArticleTextView"
+            android:layout_toRightOf="@+id/bookmarkImageView"
+            android:text="@string/your_article_is_successfully_bookmarked"
+            android:textColor="@color/white"
+            fab:fontName="oswald_regular.ttf" />
+
+        <com.mycity4kids.widget.CustomFontTextView
+            android:id="@+id/viewBookmarkedArticleTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:padding="10dp"
+            android:text="VIEW"
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            fab:fontName="oswald_regular.ttf"
+
+            />
+    </RelativeLayout>
+
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
@@ -38,8 +86,8 @@
         android:id="@+id/titleTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
         android:layout_below="@+id/toolbar"
+        android:layout_alignParentLeft="true"
         android:layout_toLeftOf="@+id/followUnfollowTextView"
         android:padding="10dp"
         android:text="Parenting"
@@ -52,37 +100,30 @@
         android:id="@+id/followUnfollowTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/recyclerView"
-        android:layout_alignParentRight="true"
+        android:layout_above="@+id/swipe_refresh_layout"
         android:layout_below="@+id/toolbar"
+        android:layout_alignParentRight="true"
         android:gravity="center"
         android:padding="10dp"
         android:text="FOLLOW"
         android:textColor="@color/toolbar.menu_items"
         android:visibility="gone" />
 
-    <!--<android.support.v4.widget.SwipeRefreshLayout-->
-    <!--android:id="@+id/swipe_refresh_layout"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_below="@+id/titleTextView">-->
-
-    <!--<ListView-->
-    <!--android:id="@+id/scroll"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="match_parent"-->
-    <!--android:layout_below="@+id/toolbar"-->
-    <!--android:layout_marginTop="2dp"-->
-    <!--android:background="@color/grey_light"-->
-    <!--android:divider="@color/transparent"-->
-    <!--android:drawSelectorOnTop="true" />-->
-    <!--</android.support.v4.widget.SwipeRefreshLayout>-->
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swipe_refresh_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/toolbar" />
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/titleTextView">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@+id/toolbar" />
+
+
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
 
     <TextView
         android:id="@+id/noBlogsTextView"
@@ -190,9 +231,9 @@
         android:id="@+id/fabSort"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
         android:layout_gravity="right|bottom"
         fab:fab_colorNormal="@color/fab.white"
         fab:fab_colorPressed="@color/fab.white"
@@ -264,8 +305,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:paddingBottom="15dp"
                 android:paddingTop="15dp"
+                android:paddingBottom="15dp"
                 android:text="Sort by"
                 android:textColor="@color/grey"
                 android:textSize="16sp"
