--- a/MyCity4Kids/MyCity4Kids/res/layout/fragment_groupspoll.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/fragment_groupspoll.xml
@@ -11,8 +11,8 @@
         android:layout_height="match_parent"
         android:background="@color/white"
         android:drawablePadding="20dp"
-        android:padding="35dp"
         android:gravity="center"
+        android:padding="35dp"
         android:text="Please join at least 1 group to start viewing posts here."
         android:textColor="@color/color_979797"
         android:textSize="18sp"
@@ -163,6 +163,29 @@
         android:elevation="6dp"
         android:visibility="gone" />
 
+
+    <com.facebook.shimmer.ShimmerFrameLayout
+        android:id="@+id/shimmer1"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/toolbar"
+        android:background="@color/white"
+        app:duration="1000">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <include layout="@layout/mainshimmer_layout" />
+
+            <include layout="@layout/mainshimmer_layout" />
+
+            <include layout="@layout/mainshimmer_layout" />
+
+        </LinearLayout>
+
+    </com.facebook.shimmer.ShimmerFrameLayout>
 
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
