--- a/MyCity4Kids/MyCity4Kids/res/layout/leaf_topic_articles_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/leaf_topic_articles_activity.xml
@@ -33,6 +33,24 @@
                 android:textSize="20sp"
                 app:fontName="oswald_regular.ttf" />
 
+            <ImageView
+                android:id="@+id/imageSortBy"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginTop="0dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginRight="10dp"
+                android:paddingLeft="@dimen/space_20"
+                android:paddingTop="16dp"
+                android:paddingRight="@dimen/space_20"
+                android:paddingBottom="16dp"
+                android:src="@drawable/ic_flip"
+                android:tint="@color/greytxt_color" />
+
         </RelativeLayout>
     </androidx.appcompat.widget.Toolbar>
 
@@ -56,8 +74,8 @@
         android:id="@+id/topLayerGuideLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/tab_layout"
         android:layout_alignTop="@+id/toolbar"
+        android:layout_alignBottom="@+id/tab_layout"
         android:background="@color/dark_transparent"
         android:clickable="true"
         android:elevation="6dp"
