--- a/MyCity4Kids/MyCity4Kids/res/layout/topic_listing_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/topic_listing_activity.xml
@@ -7,57 +7,53 @@
     android:background="@color/home_bg"
     android:clickable="true">
 
-    <com.google.android.material.appbar.AppBarLayout
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
+        android:background="?attr/colorPrimary"
+        android:minHeight="?attr/actionBarSize"
+        app:theme="@style/ToolbarTheme"
+        app:titleTextAppearance="@style/ToolbarTheme.Title">
 
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
+
+        <RelativeLayout
+            android:id="@+id/toolbarRelativeLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="?attr/colorPrimary"
-            android:minHeight="?attr/actionBarSize"
-            app:theme="@style/ToolbarTheme"
-            app:titleTextAppearance="@style/ToolbarTheme.Title">
+            android:visibility="visible">
 
-            <RelativeLayout
-                android:id="@+id/toolbarRelativeLayout"
-                android:layout_width="match_parent"
+            <com.mycity4kids.widget.CustomFontTextView
+                android:id="@+id/toolbarTitleTextView"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:visibility="visible">
+                android:layout_centerVertical="true"
+                android:text="@string/home_screen.select_an_option.title"
+                android:textColor="@color/home.toolbar.titlecolor"
+                android:textSize="20sp"
+                app:fontName="oswald_regular.ttf" />
 
-                <com.mycity4kids.widget.CustomFontTextView
-                    android:id="@+id/toolbarTitleTextView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:text="@string/home_screen.select_an_option.title"
-                    android:textColor="@color/home.toolbar.titlecolor"
-                    android:textSize="20sp"
-                    app:fontName="oswald_regular.ttf" />
+            <ImageView
+                android:id="@+id/imageSortBy"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginTop="0dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginRight="10dp"
+                android:paddingLeft="@dimen/space_20"
+                android:paddingTop="16dp"
+                android:paddingRight="@dimen/space_20"
+                android:paddingBottom="16dp"
+                android:src="@drawable/ic_flip"
+                android:tint="@color/greytxt_color" />
+        </RelativeLayout>
 
-                <ImageView
-                    android:id="@+id/imageSortBy"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentTop="true"
-                    android:layout_alignParentEnd="true"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    android:layout_marginTop="0dp"
-                    android:layout_marginEnd="10dp"
-                    android:layout_marginRight="10dp"
-                    android:paddingLeft="@dimen/space_20"
-                    android:paddingTop="16dp"
-                    android:paddingRight="@dimen/space_20"
-                    android:paddingBottom="16dp"
-                    android:src="@drawable/ic_flip"
-                    android:tint="@color/greytxt_color" />
-            </RelativeLayout>
-
-        </androidx.appcompat.widget.Toolbar>
-    </com.google.android.material.appbar.AppBarLayout>
+    </androidx.appcompat.widget.Toolbar>
 
 
     <LinearLayout
@@ -102,25 +98,57 @@
 
     <include layout="@layout/rewards_bottom_sheet" />
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fabAdd"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
         android:layout_gravity="right|bottom"
-        android:layout_margin="@dimen/space_20"
-        android:scaleType="center"
-        android:tint="@color/white"
-        android:visibility="gone"
-        app:backgroundTint="@color/app_red"
-        app:fab_colorNormal="@color/app_red"
-        app:fab_colorPressed="@color/app_red"
+        android:layout_marginRight="@dimen/space_10"
+        android:layout_marginBottom="@dimen/space_20"
+        android:orientation="vertical">
 
-        app:layout_anchorGravity="top|end"
-        app:rippleColor="@color/app_red"
-        app:srcCompat="@drawable/ic_video_new" />
+        <com.mycity4kids.widget.CustomFontTextView
+            android:id="@+id/tap"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:background="@color/white"
+            android:paddingLeft="@dimen/space_20"
+            android:paddingTop="@dimen/space_5"
+            android:paddingRight="@dimen/space_20"
+            android:paddingBottom="@dimen/space_5"
+            android:text="Tap to create"
+            android:textColor="@color/black"
+            android:textSize="16sp"
+            android:visibility="invisible"
+            app:fontName="oswald.ttf" />
+
+        <View
+            android:id="@+id/div"
+            android:layout_width="2dp"
+            android:layout_height="50dp"
+            android:layout_below="@+id/tap"
+            android:layout_centerHorizontal="true"
+            android:layout_gravity="center_horizontal"
+            android:background="@color/white"
+            android:visibility="invisible" />
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fabAdd"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_below="@+id/div"
+            android:layout_centerHorizontal="true"
+            android:elevation="4dp"
+            android:tint="@color/white"
+            android:visibility="gone"
+            app:backgroundTint="@color/app_red"
+            app:srcCompat="@drawable/ic_video_new" />
+
+
+    </RelativeLayout>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fabAddShortStory"
@@ -137,7 +165,6 @@
         app:backgroundTint="@color/app_red"
         app:fab_colorNormal="@color/app_red"
         app:fab_colorPressed="@color/app_red"
-
         app:layout_anchorGravity="top|end"
         app:rippleColor="@color/app_red"
         app:srcCompat="@drawable/ic_plus" />
@@ -148,7 +175,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/dark_transparent"
-        android:visibility="gone">
+        android:visibility="invisible">
 
 
         <androidx.appcompat.widget.Toolbar
@@ -240,26 +267,56 @@
                 android:layout_height="match_parent" />
         </LinearLayout>
 
-
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/fabAddCoachMark"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
             android:layout_alignParentBottom="true"
             android:layout_gravity="right|bottom"
-            android:layout_margin="@dimen/space_20"
-            android:scaleType="center"
-            android:tint="@color/white"
-            android:visibility="visible"
-            app:backgroundTint="@color/app_red"
-            app:fab_colorNormal="@color/app_red"
-            app:fab_colorPressed="@color/app_red"
+            android:layout_marginRight="@dimen/space_10"
+            android:layout_marginBottom="@dimen/space_20"
+            android:orientation="vertical">
 
-            app:layout_anchorGravity="top|end"
-            app:rippleColor="@color/app_red"
-            app:srcCompat="@drawable/ic_video_new" />
+            <com.mycity4kids.widget.CustomFontTextView
+                android:id="@+id/tapToCreateTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/white"
+
+                android:paddingLeft="@dimen/space_20"
+                android:paddingTop="@dimen/space_5"
+                android:paddingRight="@dimen/space_20"
+                android:paddingBottom="@dimen/space_5"
+
+                android:text="Tap to create"
+                android:textColor="@color/black"
+                android:textSize="16sp"
+                app:fontName="oswald.ttf" />
+
+            <View
+                android:id="@+id/divider"
+                android:layout_width="2dp"
+                android:layout_height="40dp"
+                android:layout_below="@id/tapToCreateTextView"
+                android:layout_centerHorizontal="true"
+                android:background="@color/white" />
+
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/fabAddCoachMark"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_below="@id/divider"
+                android:layout_centerHorizontal="true"
+                android:elevation="4dp"
+                android:tint="@color/white"
+                android:visibility="visible"
+
+                app:backgroundTint="@color/app_red"
+                app:srcCompat="@drawable/ic_video_new" />
+
+
+        </RelativeLayout>
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/fabAddShortStoryCoachMark"
@@ -276,7 +333,6 @@
             app:backgroundTint="@color/app_red"
             app:fab_colorNormal="@color/app_red"
             app:fab_colorPressed="@color/app_red"
-
             app:layout_anchorGravity="top|end"
             app:rippleColor="@color/app_red"
             app:srcCompat="@drawable/ic_plus" />
