Article details load content from url

--- a/MyCity4Kids/MyCity4Kids/res/xml/remote_config_defaults.xml
+++ b/MyCity4Kids/MyCity4Kids/res/xml/remote_config_defaults.xml
@@ -12,4 +12,8 @@
         <key>app_update_frequency</key>
         <value>0</value>
     </entry>
+    <entry>
+        <key>new_article_detail_flag</key>
+        <value>false</value>
+    </entry>
 </defaultsMap>
