--- a/MyCity4Kids/MyCity4Kids/res/layout/article_details_fragment.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/article_details_fragment.xml
@@ -23,7 +23,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
-                android:visibility="gone"/>
+                android:visibility="gone" />
 
             <com.mycity4kids.widget.CustomFontTextView
                 android:id="@+id/article_title"
@@ -238,11 +238,27 @@
                 android:layout_marginBottom="10dp"
                 android:background="@color/light_grey1" />
 
+            <LinearLayout
+                android:id="@+id/progressBarContainer"
+                android:layout_width="match_parent"
+                android:layout_height="500dp"
+                android:layout_below="@+id/webViewSeparator"
+                android:gravity="center_horizontal"
+                android:orientation="vertical"
+                android:visibility="visible">
+
+                <ProgressBar
+                    android:id="@+id/webViewProgress"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="100dp" />
+            </LinearLayout>
+
             <WebView
                 android:id="@+id/articleWebView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/webViewSeparator"
+                android:layout_below="@+id/progressBarContainer"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:autoLink="web"
@@ -384,8 +400,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/native_ad_container"
-                android:visibility="gone"
-                android:background="@color/white">
+                android:background="@color/white"
+                android:visibility="gone">
 
                 <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
