Target SDK 28 + remove context param required for tabs font update + kotlin null pointer fix in campaign list

--- a/MyCity4Kids/MyCity4Kids/res/xml/remote_config_defaults.xml
+++ b/MyCity4Kids/MyCity4Kids/res/xml/remote_config_defaults.xml
@@ -16,4 +16,8 @@
         <key>new_article_detail_flag</key>
         <value>false</value>
     </entry>
+    <entry>
+        <key>home_page_feed_order</key>
+        <value>trending,todaysBest,editorPicks,foryou,recent</value>
+    </entry>
 </defaultsMap>
