--- a/MyCity4Kids/MyCity4Kids/res/layout/campaign_detail_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/campaign_detail_activity.xml
@@ -642,8 +642,22 @@
             android:textSize="18sp"
             app:fontName="oswald_regular.ttf" />
 
+        <ImageView
+            android:id="@+id/unapply_campaign"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginLeft="@dimen/space_25"
+            android:drawablePadding="2dp"
+            android:padding="4dp"
+            android:visibility="gone"
+            android:src="@drawable/ic_more_vert_black_24dp"
+            android:text="@string/campaign_details_applied"
+            android:textColor="@color/white"
+            android:textSize="8sp"
+            android:tint="@color/white" />
     </RelativeLayout>
-
 
 
     <com.facebook.shimmer.ShimmerFrameLayout
@@ -668,4 +682,4 @@
         </LinearLayout>
 
     </com.facebook.shimmer.ShimmerFrameLayout>
-    </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
