--- a/MyCity4Kids/WordPressEditor/src/main/res/layout-w600dp/format_bar.xml
+++ b/MyCity4Kids/WordPressEditor/src/main/res/layout-w600dp/format_bar.xml
@@ -1,19 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="@dimen/format_bar_height_tablet"
+    android:layout_alignParentBottom="true"
     android:layout_gravity="bottom"
     android:background="@color/format_bar_background"
-    android:layout_alignParentBottom="true"
     android:orientation="vertical">
 
     <View
         android:id="@+id/format_bar_horizontal_divider"
+        style="@style/Divider"
         android:layout_width="fill_parent"
-        android:layout_height="@dimen/format_bar_horizontal_divider_height"
-        style="@style/Divider"/>
+        android:layout_height="@dimen/format_bar_horizontal_divider_height" />
 
     <LinearLayout
         android:id="@+id/format_bar_buttons"
@@ -34,8 +33,8 @@
                 style="@style/FormatBarButtonTablet"
                 android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
-                android:contentDescription="@string/format_bar_description_media"
-                android:background="@drawable/format_bar_button_media_selector"/>
+                android:background="@drawable/format_bar_button_media_selector"
+                android:contentDescription="@string/format_bar_description_media" />
         </LinearLayout>
 
         <LinearLayout
@@ -48,18 +47,18 @@
                 style="@style/FormatBarButtonTablet"
                 android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
-                android:contentDescription="@string/format_bar_description_bold"
                 android:background="@drawable/format_bar_button_bold_selector"
-                android:tag="@string/format_bar_tag_bold"/>
+                android:contentDescription="@string/format_bar_description_bold"
+                android:tag="@string/format_bar_tag_bold" />
 
             <org.wordpress.android.editor.RippleToggleButton
                 android:id="@+id/format_bar_button_italic"
                 style="@style/FormatBarButtonTablet"
                 android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
-                android:contentDescription="@string/format_bar_description_italic"
                 android:background="@drawable/format_bar_button_italic_selector"
-                android:tag="@string/format_bar_tag_italic"/>
+                android:contentDescription="@string/format_bar_description_italic"
+                android:tag="@string/format_bar_tag_italic" />
 
             <org.wordpress.android.editor.RippleToggleButton
                 android:id="@+id/format_bar_button_strikethrough"
@@ -67,7 +66,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
                 android:background="@drawable/format_bar_button_strikethrough_selector"
-                android:tag="@string/format_bar_tag_strikethrough"/>
+                android:tag="@string/format_bar_tag_strikethrough" />
         </LinearLayout>
 
         <LinearLayout
@@ -80,9 +79,9 @@
                 style="@style/FormatBarButtonTablet"
                 android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
-                android:contentDescription="@string/format_bar_description_link"
                 android:background="@drawable/format_bar_button_link_selector"
-                android:tag="@string/format_bar_tag_link"/>
+                android:contentDescription="@string/format_bar_description_link"
+                android:tag="@string/format_bar_tag_link" />
         </LinearLayout>
 
         <LinearLayout
@@ -95,29 +94,42 @@
                 style="@style/FormatBarButtonTablet"
                 android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
-                android:contentDescription="@string/format_bar_description_ul"
                 android:background="@drawable/format_bar_button_ul_selector"
-                android:tag="@string/format_bar_tag_unorderedList"/>
+                android:contentDescription="@string/format_bar_description_ul"
+                android:tag="@string/format_bar_tag_unorderedList" />
 
             <org.wordpress.android.editor.RippleToggleButton
                 android:id="@+id/format_bar_button_ol"
                 style="@style/FormatBarButtonTablet"
                 android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
-                android:contentDescription="@string/format_bar_description_ol"
                 android:background="@drawable/format_bar_button_ol_selector"
-                android:tag="@string/format_bar_tag_orderedList"/>
+                android:contentDescription="@string/format_bar_description_ol"
+                android:tag="@string/format_bar_tag_orderedList" />
 
             <org.wordpress.android.editor.RippleToggleButton
                 android:id="@+id/format_bar_button_quote"
                 style="@style/FormatBarButtonTablet"
                 android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
-                android:contentDescription="@string/format_bar_description_quote"
                 android:background="@drawable/format_bar_button_quote_selector"
-                android:tag="@string/format_bar_tag_blockquote"/>
+                android:contentDescription="@string/format_bar_description_quote"
+                android:tag="@string/format_bar_tag_blockquote" />
         </LinearLayout>
 
+        <LinearLayout
+            style="@style/FormatBarTabletGroup"
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent">
+
+            <org.wordpress.android.editor.RippleToggleButton
+                android:id="@+id/format_bar_button_audio"
+                style="@style/FormatBarButtonTablet"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:background="@drawable/ic_audio_01"
+                android:contentDescription="@string/format_bar_description_media" />
+        </LinearLayout>
         <!--<LinearLayout
             style="@style/FormatBarTabletGroup"
             android:layout_width="wrap_content"
