Disabled Speech To Text

--- a/MyCity4Kids/WordPressEditor/src/main/res/layout-w380dp/format_bar.xml
+++ b/MyCity4Kids/WordPressEditor/src/main/res/layout-w380dp/format_bar.xml
@@ -93,15 +93,15 @@
             android:contentDescription="@string/format_bar_description_link"
             android:tag="@string/format_bar_tag_link" />
 
-        <org.wordpress.android.editor.RippleToggleButton
-            android:id="@+id/format_bar_button_audio"
-            style="@style/FormatBarButton"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:layout_weight="1"
-            android:background="@drawable/ic_audio_01"
-            android:contentDescription="@string/format_bar_description_link"
-            android:tag="@string/format_bar_tag_link" />
+        <!--<org.wordpress.android.editor.RippleToggleButton-->
+        <!--android:id="@+id/format_bar_button_audio"-->
+        <!--style="@style/FormatBarButton"-->
+        <!--android:layout_width="25dp"-->
+        <!--android:layout_height="25dp"-->
+        <!--android:layout_weight="1"-->
+        <!--android:background="@drawable/ic_audio_01"-->
+        <!--android:contentDescription="@string/format_bar_description_link"-->
+        <!--android:tag="@string/format_bar_tag_link" />-->
         <!-- <View
              android:id="@+id/format_bar_vertical_divider"
              android:layout_width="@dimen/format_bar_vertical_divider_width"
