removed + from url proof for preproof

--- a/MyCity4Kids/MyCity4Kids/res/layout/fragment_add_proof.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/fragment_add_proof.xml
@@ -279,6 +279,7 @@
                 android:textColor="@color/app_red"
                 android:textSize="24sp"
                 android:textStyle="bold"
+                android:visibility="gone"
                 app:fontName="oswald_regular.ttf" />
         </RelativeLayout>
     </ScrollView>
