--- a/MyCity4Kids/MyCity4Kids/res/layout/ranking_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/ranking_activity.xml
@@ -44,6 +44,7 @@
                 android:paddingRight="10dp"
                 android:paddingStart="5dp"
                 android:paddingTop="5dp"
+                android:visibility="gone"
                 android:src="@drawable/ic_search" />
 
         </RelativeLayout>
