localisation, unapply campaign, disable longclick webview

--- a/MyCity4Kids/MyCity4Kids/res/layout/fragment_rewards_family_info.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/fragment_rewards_family_info.xml
@@ -174,7 +174,7 @@
                     android:layout_marginRight="4dp"
                     android:background="@drawable/shape_red_border"
                     android:gravity="center"
-                    android:text="EDIT"
+                    android:text="@string/rewards_edit"
                     android:textColor="@color/app_red"
                     android:textSize="14sp"
                     android:visibility="gone"
@@ -507,7 +507,7 @@
                     android:layout_marginRight="4dp"
                     android:background="@drawable/shape_red_border"
                     android:gravity="center"
-                    android:text="EDIT"
+                    android:text="@string/rewards_edit"
                     android:textColor="@color/app_red"
                     android:textSize="14sp"
                     android:visibility="gone"
