--- a/MyCity4Kids/MyCity4Kids/res/layout/campaign_enter_registered_paytm_mobile_number_screen.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/campaign_enter_registered_paytm_mobile_number_screen.xml
@@ -66,7 +66,7 @@
                 android:layout_marginTop="43dp"
                 android:layout_marginRight="12dp"
                 android:gravity="center"
-                android:text="PLEASE ENTER YOUR PAYTM REGISTERED MOBILE NUMBER"
+                android:text="@string/enter_paytm_number"
                 android:textColor="#4A4A4A"
                 android:textSize="20sp"
                 app:fontName="oswald_regular.ttf" />
@@ -193,7 +193,7 @@
                 android:layout_marginLeft="12dp"
                 android:layout_marginRight="12dp"
                 android:gravity="center"
-                android:text="Note: Please enter your bank information in English only"
+                android:text="@string/note_detail_in_english"
                 android:textColor="@color/app_red"
                 android:textSize="12sp"
                 app:fontName="oswald_regular.ttf" />
