--- a/MyCity4Kids/MyCity4Kids/res/layout/fragment_rewards_social_info.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/fragment_rewards_social_info.xml
@@ -140,7 +140,7 @@
                     android:layout_marginLeft="@dimen/space_15"
                     android:layout_weight=".6"
                     android:background="@null"
-                    android:hint="Add Instagram handle e.g. ritu_mommy"
+                    android:hint="@string/add_instagram_handle"
                     android:inputType="textNoSuggestions"
                     android:paddingTop="10dp"
 
@@ -489,7 +489,7 @@
                     android:layout_marginRight="4dp"
                     android:background="@drawable/shape_red_border"
                     android:gravity="center"
-                    android:text="EDIT"
+                    android:text="@string/rewards_edit"
                     android:textColor="@color/app_red"
                     android:textSize="14sp"
                     android:visibility="gone"
